[package]
name = "rawsample"
version = "0.3.0"
edition = "2018"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "A library for working with raw audio samples."
license = "MIT"
repository = "https://github.com/HEnquist/rawsample"
keywords = ["audio", "sound"]
categories = ["multimedia::audio"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
paste = "1.0.12"