[package]
name = "audioboiler_buffers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
audioboiler_traits = { path = "../audioboiler_traits" }
rawsample = { path = "../rawsample" }
paste = "1.0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "iteration"
harness = false
